# CUPyDO

./: .gitignore  CMakeLists.txt  ExampleFluidInterface.py  ExampleSolidInterface.py  FSICoupler.py  GetDPInterface.py  ModalInterface.py  MtfInterface.py  NOTICE.txt  PfemInterface.py  RBMIntegratorInterface.py  README.md  SU2Interface.py  compile.bat  compile.sh  cupydoExtProgs(Linux).json  cupydoExtProgs.json  fsi.py  fsi_pyutils.py  remote_run.sh  run.bat  run.py  run.sh  solverPaths.json
CMake/: FindMpi4Py.cmake  FindNUMPY.cmake  FindPETSc.cmake  FindPETSc4Py.cmake  cupyMacros.cmake
_src/: CCupydo.i  numpy.i
apps/PFEM-Metafor/: VIV_cantileverBeam.geo  VIV_cantileverBeam_freeSlip_air_Pfem.py  birdImpact_deformable_panel_bird_Pfem.py  birdImpact_deformable_panel_bird_Pfem_Axisym.py  birdImpact_deformable_panel_bird_Pfem_Smojver.py  birdImpact_deformable_panel_bird_Pfem_Smojver_Axisym.py  birdImpact_deformable_panel_panel_alu_Mtf.py  birdStrike_lsDyna_benchmark_bird_Pfem.py  fsi_VIV_cantileverBeam_Mtf_Pfem.py  fsi_VIV_cantileverBeam_Mtf_Pfem_EAS.py  fsi_VIV_cantileverBeam_freeSlip_Mtf_Pfem.py  fsi_VIV_cantileverBeam_freeSlip_Mtf_Pfem_EAS.py  fsi_birdImpact_deformable_panel_alu_Mtf_Pfem.py  fsi_birdImpact_deformable_panel_alu_Mtf_Pfem_Axisym.py  fsi_birdImpact_deformable_panel_alu_Mtf_Pfem_Smojver.py  fsi_birdImpact_deformable_panel_alu_Mtf_Pfem_Smojver_Axisym.py  fsi_birdImpact_deformable_panel_steel_Mtf_Pfem.py  fsi_birdStrike_lsDyna_benchmark_Mtf_Pfem.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6_EAS.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6_IQN_ILS.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6_IQN_ILS_1.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6_IQN_ILS_2.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6_fine.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_2e7.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_2_38e7.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_6_0e6.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_IQN_ILS.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_IQN_ILS_1.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_IQN_ILS_2.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_IQN_ILS_4.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_IQN_ILS_6.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_IQN_ILS_dt_0001.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_IQN_ILS_dt_0005.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_dt_0001.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_fine.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_1100_fine_E_9_8e6_EAS_IQN_ILS.py  fsi_waterColoumnWithElasticGate_Mtf_Pfem_rho_5500.py  waterColoumnFallWithFlexibleObstacle_water_Pfem.py  (+7 more)
apps/PFEM_Metafor/: VIV_cantileverBeam_air_Pfem.py  VIV_cantileverBeam_beam_Mtf_EAS.py  VIV_cantileverBeam_freeSlip_beam_Mtf.py  VIV_cantileverBeam_freeSlip_beam_Mtf_EAS.py  birdImpact_deformable_panel_Mtf_Pfem.geo  birdImpact_deformable_panel_Mtf_Pfem_Axisym.geo  birdImpact_deformable_panel_Mtf_Pfem_Smojver.geo  birdImpact_deformable_panel_Mtf_Pfem_Smojver_Axisym.geo  birdImpact_deformable_panel_bird_Pfem_Smojver.py  birdImpact_deformable_panel_bird_Pfem_Smojver_Axisym.py  birdImpact_deformable_panel_panel_alu_Mtf.py  birdImpact_deformable_panel_panel_alu_Mtf_Axisym.py  birdImpact_deformable_panel_panel_alu_Mtf_Smojver.py  birdImpact_deformable_panel_panel_alu_Mtf_Smojver_Axisym.py  birdImpact_deformable_panel_panel_steel_Mtf.py  birdStrike_lsDyna_benchmark_Mtf_Pfem.geo  birdStrike_lsDyna_benchmark_beam_Mtf.py  birdStrike_lsDyna_benchmark_bird_Pfem.py  fsi_VIV_cantileverBeam_Mtf_Pfem.py  fsi_VIV_cantileverBeam_Mtf_Pfem_EAS.py  fsi_VIV_cantileverBeam_freeSlip_Mtf_Pfem.py  fsi_VIV_cantileverBeam_freeSlip_Mtf_Pfem_EAS.py  fsi_birdImpact_deformable_panel_alu_Mtf_Pfem.py  fsi_birdImpact_deformable_panel_alu_Mtf_Pfem_Axisym.py  fsi_birdImpact_deformable_panel_alu_Mtf_Pfem_Smojver.py  fsi_birdImpact_deformable_panel_alu_Mtf_Pfem_Smojver_Axisym.py  fsi_birdImpact_deformable_panel_steel_Mtf_Pfem.py  fsi_birdStrike_lsDyna_benchmark_Mtf_Pfem.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6_EAS.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6_IQN_ILS.py  fsi_waterColoumnFallWithFlexibleObstacle_Mtf_Pfem_E_1_0e6_IQN_ILS_1.py  (+34 more)
cases/: README.md
ccupydo/: __init__.py
cupydo/: FSICoupler.py  __init__.py  algorithm.py  criterion.py  fsi_pyutils.py  genericSolvers.py  interfaceData.py  interpolator.py  linearSolver.py  manager.py  testing.py  timeStep.py  utilities.py
cupydoInterfaces/: ExampleFluidInterface.py  ExampleSolidInterface.py  FlowInterface.py  GetDPInterface.py  ModalInterface.py  MtfInterface.py  PfemInterface.py  RBMIntegratorInterface.py  SU2Interface.py  SU2SolidInterface.py  pyBeamInterface.py
exe/: .cupydoExtProgs(unix example).json  .cupydoExtProgs(win example).json  .cupydoExtProgs_unix_example.json  .cupydoExtProgs_win_example.json  battery.py  cupydoExtProgs(unix example).json  setup_battery.sh  setup_battery_MPI.sh
include/: CCupydo.i  adtcore.h  cAdt.h  cFlexInterfaceData.h  cInterfaceMatrix.h  cInterpolator.h  cLinearSolver.h  cManager.h  cMpi.h
src/: adtcore.cpp  adtcore.h  cAdt.cpp  cAdt.h  cFlexInterfaceData.cpp  cFlexInterfaceData.h  cInterfaceMatrix.cpp  cInterfaceMatrix.h  cInterpolator.cpp  cInterpolator.h  cLinearSolver.cpp  cLinearSolver.h  cManager.cpp  cManager.h  cMpi.h  cTest_general.cpp
tests/: CMakeLists.txt  beam.py  beam_fsi.py  birdImpact_deformable_panel_Mtf_Pfem.py  birdImpact_deformable_panel_Mtf_Pfem_IQN_ILS.py  birdImpact_deformable_panel_Mtf_Pfem_IQN_ILS_2.py  birdImpact_deformable_panel_Mtf_Pfem_IQN_ILS_4.py  birdImpact_deformable_panel_bird_Pfem.py  birdImpact_deformable_panel_panel_steel_Mtf.py  birdImpact_deformable_panel_rebuildCurvesFromMtfFac.py
verif/: results-Linux64.ascii  results-Windows.ascii
(+739 files in other folders)
